<resources>
    <string name="app_name">IMCCalculadora</string>
    <string name="descricaoImagem1">Foto de uma balança</string>
    <string name="descricaoImagem2">Foto do cálculo do IMC</string>
    <string name="altura">Digite a seu altura:</string>
    <string name="altura1">Altura (cm)</string>
    <string name="peso">Digite o seu peso:</string>
    <string name="peso1">Peso (kg)</string>
    <string name="btnIMC">Mostrar IMC</string>
    <string name="result">O resultado é:</string>
    <string name="voltar">Voltar</string>
</resources>
