<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.imccalculadora.MainActivity">


    <TextView
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:gravity="center"
        android:text="@string/peso"
        android:textSize="25dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/peso1"
        android:inputType="number" />

    <TextView
        android:id="@+id/txt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:gravity="center"
        android:text="@string/altura"
        android:textSize="25dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/altura1"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/bntCalculateId"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dip"
        android:layout_marginTop="45dp"
        android:layout_marginRight="50dip"
        android:background="@color/colorPrimary"
        android:baselineAligned="false"
        android:text="@string/btnIMC"
        android:textColor="#ffffff" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="364dp"
        android:layout_height="201dp"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"

        android:layout_marginBottom="0dp"
        android:adjustViewBounds="false"
        android:background="@android:color/background_light"
        android:contentDescription="@string/descricaoImagem1"
        android:paddingBottom="0dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/imc" />



</LinearLayout>