<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.imccalculadora.ShowResultActivity">

    <TextView
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:textStyle="bold"
        android:baselineAligned="false"
        android:gravity="center"
        android:text="@string/result" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:baselineAligned="false"
        android:gravity="center"
        android:textSize="18dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnVoltar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dip"
        android:layout_marginTop="35dp"
        android:layout_marginRight="50dip"
        android:background="@color/colorPrimary"
        android:baselineAligned="false"
        android:text="@string/voltar"
        android:textColor="#ffffff" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="362dp"
        android:layout_height="147dp"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:adjustViewBounds="false"
        android:background="@android:color/background_light"
        android:contentDescription="@string/descricaoImagem2"
        android:paddingBottom="0dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/imcresult" />


</LinearLayout>


